<!--
  ~ Copyright (c) 2018.
  ~
  ~ This file is part of ProcessManager.
  ~
  ~ ProcessManager is free software: you can redistribute it and/or modify it under the terms of version 2.1 of the
  ~ GNU Lesser General Public License as published by the Free Software Foundation.
  ~
  ~ ProcessManager is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License along with ProcessManager.  If not,
  ~ see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Darwin-Auth</string>
    <string name="authenticator_label">Darwin Account</string>
    <string name="authtoken_label">full access</string>
    <string name="authenticator_activity_label">Authenticate to Darwin</string>
    <string name="dialogintro">Please provide your login credentials for the darwin server.</string>
    <string name="usernamelabel">Your username on darwin:</string>
    <string name="passwordlabel">Your password:</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="creating_keys">Creating keys</string>
    <string name="authenticating">authenticating</string>
    <string name="toast_create_success">Account created</string>
    <string name="toast_update_success">Account updated</string>
    <string name="toast_cancelled">Cancelled</string>
    <string name="dlg_title_error">Error</string>
    <string name="dlg_msg_error">The account could not be created</string>
    <string name="dlg_title_unauth">Invalid credentials</string>
    <string name="dlg_msg_unauth">The username password combination is not valid</string>
    <string name="retry">Retry</string>
    <string name="lbl_account_creation_cancelled">Account creation cancelled</string>
    <string name="lbl_cancellation_exception_report">Cancelled: %s</string>
    <string name="lbl_getting_token">Getting auth token</string>
    <string name="lbl_permissionRequest">Do you want to allow <b>%s</b> full access to the following darwin account?</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="error_invalid_tokenType">invalid authTokenType</string>
    <string name="err_unable_to_get_auth_key">Could not get authentication key</string>
    <string name="pref_accountpref_title">Account information</string>
    <string name="pref_accountpref_category">Darwin account information and settings</string>
    <string name="pref_accountpref_summary">Get account information</string>
    <string name="title_account_list">Accounts</string>
    <string name="title_account_detail">Account Detail</string>
    <string name="unset">unset</string>
    <string name="pending">pending</string>
    <string name="lblUsername">Username:</string>
    <string name="lblAlias">Alias:</string>
    <string name="lblFullname">Full name:</string>
    <string name="lblLastUsed">Last used:</string>
    <string name="unknownApp">Unknown application</string>
    <string name="lastUseNever">Never</string>
    <string name="lbl_authorized_applications">Authorized applications</string>
</resources>
