<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.
  ~
  ~ This file is part of ProcessManager.
  ~
  ~ ProcessManager is free software: you can redistribute it and/or modify it under the terms of version 2.1 of the
  ~ GNU Lesser General Public License as published by the Free Software Foundation.
  ~
  ~ ProcessManager is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License along with Foobar.  If not,
  ~ see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <!--suppress AndroidUnknownAttribute -->
    <data class="DarwinAuthenticatorActivityBinding">
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="14dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_weight="0"
                android:text="@string/dialogintro" />

        <android.support.v4.widget.Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.375" />

        <TextView
                android:id="@+id/authorityLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.v4.widget.Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.375" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_weight="0"
            android:labelFor="@+id/editUsername"
            android:text="@string/usernamelabel" />

        <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:autofillHints="username">

            <requestFocus />
        </EditText>

        <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0"
            android:labelFor="@+id/editPassword"
            android:text="@string/passwordlabel" />

        <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/hint_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:autofillHints="password" />

        <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarStyle"
                >

            <Button
                    android:id="@+id/cancelbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@android:string/cancel"
                    style="?attr/buttonBarNegativeButtonStyle"
                    />

            <Button
                    android:id="@+id/okbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@android:string/ok"
                    style="?attr/buttonBarPositiveButtonStyle"
                    />

        </LinearLayout>

    </LinearLayout>
</layout>