<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.
  ~
  ~ This file is part of ProcessManager.
  ~
  ~ ProcessManager is free software: you can redistribute it and/or modify it under the terms of version 2.1 of the
  ~ GNU Lesser General Public License as published by the Free Software Foundation.
  ~
  ~ ProcessManager is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License along with Foobar.  If not,
  ~ see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <!--suppress AndroidUnknownAttribute -->
    <data>
        <variable name="callerName"
                  type="String"/>
        <variable name="account"
                  type="android.accounts.Account" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblPermissionRequest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@{@string/lbl_permissionRequest(callerName)}"
            tools:text="@string/lbl_permissionRequest"
            android:breakStrategy="balanced"
            tools:ignore="UnusedAttribute"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lblAccountName"
            app:layout_constraintVertical_chainPacked="true"

            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/lblAccountName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorHighlight"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@{account.name}"
            tools:text="pdvrieze@darwin"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPermissionRequest"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/cancelbutton"
            android:layout_marginBottom="8dp"/>


        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_no"
            style="?attr/buttonBarNegativeButtonStyle"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/okbutton"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

        <Button
            android:id="@+id/okbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_yes"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toEndOf="@id/cancelbutton"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?attr/buttonBarNegativeButtonStyle"
            tools:layout_editor_absoluteX="222dp"
            />


    </android.support.constraint.ConstraintLayout>
</layout>