<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.ac.bournemouth.darwin.auth.AccountDetailFragment">

    <data>

        <variable
            name="test"
            type="String" />

        <variable
            name="info"
            type="uk.ac.bournemouth.darwin.auth.AccountInfo" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:cardElevation="8dp" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/account_detail"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="16dp"
                    android:textIsSelectable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Account: user" />

                <TextView
                    android:id="@+id/lblUsername"
                    style="@style/TextAppearance.TableHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/lblUsername"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/account_detail" />

                <TextView
                    android:id="@+id/txtUsername"
                    style="@style/TextAppearance.TableContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="16dp"
                    android:text="@{info==null ? @string/pending : info.username}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblUsername"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/endBarrier"
                    tools:text="username" />

                <TextView
                    android:id="@+id/lblAlias"
                    style="@style/TextAppearance.TableHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lblAlias"
                    app:layout_constraintStart_toStartOf="@+id/lblUsername"
                    app:layout_constraintTop_toBottomOf="@+id/lblFullname" />

                <TextView
                    android:id="@+id/txtAlias"
                    style="@style/TextAppearance.TableContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@{info==null ? @string/pending : info.alias ?? @string/unset}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblAlias"
                    app:layout_constraintEnd_toEndOf="@+id/txtUsername"
                    app:layout_constraintStart_toEndOf="@+id/endBarrier"
                    tools:text="alias" />

                <TextView
                    android:id="@+id/lblFullname"
                    style="@style/TextAppearance.TableHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lblFullname"
                    app:layout_constraintStart_toStartOf="@+id/lblUsername"
                    app:layout_constraintTop_toBottomOf="@+id/lblUsername" />

                <TextView
                    android:id="@+id/txtFullname"
                    style="@style/TextAppearance.TableContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@{info==null ? @string/pending : info.fullname ?? @string/unset}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblFullname"
                    app:layout_constraintEnd_toEndOf="@+id/txtUsername"
                    app:layout_constraintStart_toEndOf="@+id/endBarrier"
                    tools:text="fullname" />

                <android.support.constraint.Barrier
                    android:id="@+id/endBarrier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="lblAlias,lblFullname,lblUsername"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/lblAuthorizedApps"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/lbl_authorized_applications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblFullname" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/keyList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblAuthorizedApps"
            tools:listitem="@layout/key_list_content" />
    </LinearLayout>
</layout>
